@@ -11,10 +11,16 @@ section: design
 <div class="flex flex-nowrap">
   <div class="conversations-column-list scroll-if-needed scroll-smooth-touch">
 
-    <div class="conversation-container flex bg-global-light">
-        <div class="conversation-icon rounded50 bg-white inline-flex">
-          <span class="mauto">AY</span>
-        </div>
+    <label class="conversation-container flex bg-global-light">
+        <input type="checkbox" class="conversation-checkbox sr-only">
+        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto conversation-abbr">AY</span>
+          <span class="conversation-icon-fakecheck mauto">
+            <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
+              <use xlink:href="#shape-on"></use>
+            </svg>
+          </span>
+        </span>
         <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">Meetup Ring blah blah</span></div>
@@ -37,11 +43,17 @@ section: design
               </div>
           </div>
         </div>
-    </div>
-    <div class="conversation-container flex bg-global-light">
-        <div class="conversation-icon rounded50 bg-white inline-flex">
-          <span class="mauto">SA</span>
-        </div>
+    </label>
+    <label class="conversation-container flex bg-global-light">
+        <input type="checkbox" class="conversation-checkbox sr-only">
+        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto conversation-abbr">SA</span>
+          <span class="conversation-icon-fakecheck mauto">
+            <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
+              <use xlink:href="#shape-on"></use>
+            </svg>
+          </span>
+        </span>
         <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">Palantir specs</span></div>
@@ -68,11 +80,17 @@ section: design
               </div>
           </div>
         </div>
-    </div>
-    <div class="conversation-container flex bg-global-white">
-        <div class="conversation-icon rounded50 bg-white inline-flex">
-          <span class="mauto">SA</span>
-        </div>
+    </label>
+    <label class="conversation-container flex bg-global-white">
+        <input type="checkbox" class="conversation-checkbox sr-only">
+        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto conversation-abbr">SA</span>
+          <span class="conversation-icon-fakecheck mauto">
+            <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
+              <use xlink:href="#shape-on"></use>
+            </svg>
+          </span>
+        </span>
         <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis bold">Helm meetup</span></div>
@@ -95,11 +113,17 @@ section: design
               </div>
           </div>
         </div>
-    </div>
-    <div class="conversation-container flex bg-global-white">
-        <div class="conversation-icon rounded50 bg-white inline-flex">
-          <span class="mauto">SA</span>
-        </div>
+    </label>
+    <label class="conversation-container flex bg-global-white">
+        <input type="checkbox" class="conversation-checkbox sr-only">
+        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto conversation-abbr">SA</span>
+          <span class="conversation-icon-fakecheck mauto">
+            <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
+              <use xlink:href="#shape-on"></use>
+            </svg>
+          </span>
+        </span>
         <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis bold">Tr. Spec for huruk-haïs</span></div>
@@ -122,11 +146,17 @@ section: design
               </div>
           </div>
         </div>
-    </div>
-    <div class="conversation-container flex bg-global-light">
-        <div class="conversation-icon rounded50 bg-white inline-flex">
-          <span class="mauto">GA</span>
-        </div>
+    </label>
+    <label class="conversation-container flex bg-global-light">
+        <input type="checkbox" class="conversation-checkbox sr-only">
+        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto conversation-abbr">GA</span>
+          <span class="conversation-icon-fakecheck mauto">
+            <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
+              <use xlink:href="#shape-on"></use>
+            </svg>
+          </span>
+        </span>
         <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">Tr. Gondor, Arnor </span></div>
@@ -147,11 +177,17 @@ section: design
               </div>
           </div>
         </div>
-    </div>
-    <div class="conversation-container flex bg-global-light flex-nowrap">
-        <div class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
-          <span class="mauto">JT</span>
-        </div>
+    </label>
+    <label class="conversation-container flex bg-global-light flex-nowrap">
+        <input type="checkbox" class="conversation-checkbox sr-only">
+        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto conversation-abbr">JT</span>
+          <span class="conversation-icon-fakecheck mauto">
+            <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
+              <use xlink:href="#shape-on"></use>
+            </svg>
+          </span>
+        </span>
         <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">A very loooooooooooooooooooong subject, for example Silmarillion story, blablablabla </span></div>
@@ -172,13 +208,17 @@ section: design
               </div>
           </div>
         </div>
-    </div>
-    <div class="conversation-container conversation-is-selected flex bg-global-light flex-nowrap">
-        <div class="conversation-icon flex-item-noshrink rounded50 bg-pm-blue inline-flex">
-          <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
-            <use xlink:href="#shape-on"></use>
-          </svg>
-        </div>
+    </label>
+    <label for="id_field_osef" class="conversation-container conversation-is-selected flex bg-global-light flex-nowrap">
+        <input type="checkbox" class="conversation-checkbox sr-only" checked id="id_field_osef">
+        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto conversation-abbr">JT</span>
+          <span class="conversation-icon-fakecheck mauto">
+            <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
+              <use xlink:href="#shape-on"></use>
+            </svg>
+          </span>
+        </span>
         <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">Love story</span></div>
@@ -199,12 +239,18 @@ section: design
               </div>
           </div>
         </div>
-    </div>
+      </label>
     {% for i in (1..5) %}
-    <div class="conversation-container flex bg-global-light">
-        <div class="conversation-icon rounded50 bg-white inline-flex">
-          <span class="mauto">PM</span>
-        </div>
+    <label class="conversation-container flex bg-global-light">
+        <input type="checkbox" class="conversation-checkbox sr-only">
+        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto conversation-abbr">PM</span>
+          <span class="conversation-icon-fakecheck mauto">
+            <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
+              <use xlink:href="#shape-on"></use>
+            </svg>
+          </span>
+        </span>
         <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">Another for scrolling</span></div>
@@ -226,7 +272,7 @@ section: design
               </div>
           </div>
         </div>
-    </div>
+    </label>
     {% endfor %}
     
   </div>
