@@ -5,6 +5,10 @@
 - added icon `shape-lock`
 - added `block-info-success`/`block-info-standard-success` in containers
 
+## Updated/fixes
+
+- Updated fake checkbox in conversations (WIP)
+
 
 # [1.6.9] - 2019-05-22
 
